# DocGen

./: DECISIONS.md  Doxyfile  README.md  TODO_STEP2.md  docgen.yaml  pyproject.toml  update_docs.sh
docgen/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  models.py  rendering.py
docgen/rendering/: __init__.py  markers.py
docgen/services/: __init__.py  build_service.py  doxygen_service.py  scan_service.py
docgen/templates/: ARCHITECTURE.md.j2  INDEX.md.j2  README.md.j2
docgen/utils/: code_inspect.py  ignore.py  paths.py  walk.py
docs/: Gemfile  _config.yml  commands.md  configuration.md  examples.md  getting-started.md  index.md  spec.md
docs/_layouts/: default.html
docs/assets/css/: custom.css
docs/contracts/: scan_output.json
docs/examples/: ARCHITECTURE.md  README.md
examples/: README.md
examples/mini_repo/: pyproject.toml
examples/mini_repo/src/mini_app/: __init__.py  main.py
examples/mini_repo/tests/: test_basic.py
examples/mini_repo_after/DocGen/: ARCHITECTURE.md  README.md
tests/: test_build.py  test_config.py  test_e2e.py  test_init.py  test_scan.py
tests/fixtures/repo_docker/: Dockerfile  Doxyfile  docker-compose.yml
tests/fixtures/repo_multi/: package-lock.json  package.json  pyproject.toml
tests/fixtures/repo_node/: package-lock.json  package.json
tests/fixtures/repo_node/docs/: README.md
tests/fixtures/repo_python/: pyproject.toml
